--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
+authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 name = "weft"
 version = "0.1.0"
-authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 
 [dependencies]
+html5ever = "0.22.3"
+markup5ever = "0.7.3"
