Completely absurd example of a procedural macro.

--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
+authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 name = "weft_derive"
 version = "0.1.0"
-authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 
 [dependencies]
+proc-macro2 = "0.4.20"
+quote = "0.6"
+syn = "0.15"
+
+[lib]
+proc-macro = true
