--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -4,9 +4,14 @@ name = "weft_derive"
 version = "0.1.0"
 
 [dependencies]
+failure = "0.1.3"
+html5ever = "0.22.3"
 proc-macro2 = "0.4.20"
 quote = "0.6"
-syn = "0.15"
+
+[dependencies.syn]
+features = ["extra-traits"]
+version = "0.15"
 
 [lib]
 proc-macro = true
