--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -4,8 +4,10 @@ name = "weft_derive"
 version = "0.1.0"
 
 [dependencies]
+env_logger = "0.5.13"
 failure = "0.1.3"
 html5ever = "0.22.3"
+log = "0.4.5"
 proc-macro2 = "0.4.20"
 quote = "0.6"
 
