--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -12,7 +12,7 @@ proc-macro2 = "0.4.20"
 quote = "0.6"
 
 [dependencies.syn]
-features = ["extra-traits"]
+features = ["extra-traits", "full"]
 version = "0.15"
 
 [lib]
