--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -10,6 +10,7 @@ html5ever = "0.22.3"
 log = "0.4.5"
 proc-macro2 = "0.4.20"
 quote = "0.6"
+regex = "1.0.6"
 
 [dependencies.syn]
 features = ["extra-traits", "full"]
