--- a/.travis.yml
+++ b/.travis.yml
@@ -15,23 +15,13 @@ cache:
 install:
   - true
 
-before_script:
-- |
-    pip install 'travis-cargo<0.2' --user &&
-    export PATH=$HOME/.local/bin:$PATH
-
 env:
   - TRAVIS_CARGO_NIGHTLY_FEATURE=""
 
 script:
-- travis-cargo build -- $EXTRA
-- travis-cargo test  -- $EXTRA
-- travis-cargo --only stable doc
-after_success:
-  # upload the documentation from the build with stable (automatically only actually
-  # runs on the master branch, not individual PRs)
-  - travis-cargo --only stable doc-upload
-
+- cargo build -- $EXTRA
+- cargo test  -- $EXTRA
+- cargo doc
 
 matrix:
     allow_failures:
