--- a/weft/Cargo.toml
+++ b/weft/Cargo.toml
@@ -5,7 +5,7 @@ description = "HTML templating with composability in mind"
 license = "Apache-2.0"
 version = "0.1.0"
 repository = "https://github.com/cstorey/weft"
-readme = "README.md"
+readme = "../README.md"
 categories = ["web-programming", "template-engine"]
 
 [dependencies]
@@ -14,6 +14,7 @@ markup5ever = "0.7.3"
 
 [dependencies.weft_derive]
 path = "../derive"
+version = "0.1.0"
 
 [dev-dependencies]
 regex = "1.0.5"
