--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+authors = ["Ceri Storey <cez@necrofish.org.uk>"]
 name = "weft_derive"
 description = "HTML templating with composability in mind"
 license = "Apache-2.0"
