Doc links courtesy of docs.rs.

--- a/weft/Cargo.toml
+++ b/weft/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.1"
 repository = "https://github.com/cstorey/weft"
 readme = "../README.md"
 categories = ["web-programming", "template-engine"]
+documentation = "https://docs.rs/weft"
 
 [dependencies]
 html5ever = "0.22.3"
