--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.1"
 repository = "https://github.com/cstorey/weft"
 readme = "../README.md"
 categories = ["web-programming", "template-engine"]
+documentation = "https://docs.rs/weft_derive"
 
 [dependencies]
 env_logger = "0.5.13"
