--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -8,6 +8,7 @@ name = "weft_derive"
 readme = "../README.md"
 repository = "https://github.com/cstorey/weft"
 version = "0.1.1"
+edition = "2018"
 
 [dependencies]
 env_logger = "0.6.1"
