Add doc build step.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,3 +41,4 @@ jobs:
       - run: cargo test --all
       - *SAVE_DEPS
       - run: .circleci/mdbook-install.sh
+      - run: ./mdbook build docs
