Check $BASH_ENV works as expected.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,12 @@ jobs:
     steps:
       - checkout
       - run: git merge master
+      - run: |
+          set -euxo pipefail
+          echo >> "$BASH_ENV" CANARY=t
+      - run: |
+          set -euxo pipefail
+          echo "$CANARY"
       - run: .circleci/shellcheck-install.sh
       - run: .circleci/shellcheck-run.sh
       - *RESTORE_REGISTRY
