--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,3 +47,4 @@ jobs:
       - run: mdbook build docs
       - store_artifacts:
           path: docs/book
+      - run: .circleci/push-to-gh-pages.sh docs/book
