--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,4 +48,7 @@ jobs:
       - store_artifacts:
           path: docs/book
       - run: .circleci/git-set-id.sh
+      - add_ssh_keys:
+          fingerprints:
+            - "8c:f0:86:38:cf:6e:a0:23:c4:f5:85:12:ae:b6:f3:4b"
       - run: .circleci/push-to-gh-pages.sh docs/book
