--- a/actix/Cargo.toml
+++ b/actix/Cargo.toml
@@ -12,3 +12,6 @@ documentation = "https://docs.rs/weft-actix"
 
 
 [dependencies]
+weft = { path = "../weft" }
+weft_derive = { path = "../derive" }
+actix-web = "1.0.5"
