--- a/tower/Cargo.toml
+++ b/tower/Cargo.toml
@@ -11,3 +11,14 @@ categories = ["web-programming", "template-engine", "actix"]
 documentation = "https://docs.rs/weft-tower"
 
 [dependencies]
+tower-web = "0.3.7"
+weft = { path = "../weft" }
+weft_derive = { path = "../derive" }
+http = "0.1.18"
+log = "0.4.8"
+
+[dev-dependencies]
+tokio = "0.1.22"
+futures = "0.1.28"
+reqwest = "0.9.20"
+env_logger = "0.6.2"
