Show we escape text content.

--- a/weft/Cargo.toml
+++ b/weft/Cargo.toml
@@ -11,6 +11,7 @@ documentation = "https://docs.rs/weft"
 edition = "2018"
 
 [dependencies]
+v_htmlescape = "0.4.5"
 
 [dependencies.weft_derive]
 path = "../derive"
