--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -12,13 +12,13 @@ edition = "2018"
 
 [dependencies]
 env_logger = "0.7.0"
-failure = "0.1.3"
 html5ever = "0.25.0"
 kuchiki = "0.8.0"
 log = "0.4.5"
 proc-macro2 = "1.0.0"
 quote = "1.0"
 regex = "1.0.6"
+anyhow = "1.0.28"
 
 [dependencies.syn]
 features = ["extra-traits", "full"]
