Move most type-erased related work into a seperate crate.

--- a/erased/Cargo.toml
+++ b/erased/Cargo.toml
@@ -10,3 +10,9 @@ documentation = "https://docs.rs/weft-erased"
 edition = "2018"
 
 [dependencies]
+
+[dependencies.weft]
+path = "../weft"
+version = "0.1.0"
+
+[dev-dependencies]
