--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/rust:1
+      - image: cimg/rust:1.65
         environment:
           RUSTFLAGS: -D warnings
     steps:
