--- a/weft/Cargo.toml
+++ b/weft/Cargo.toml
@@ -18,4 +18,9 @@ path = "../derive"
 version = "0.1.0"
 
 [dev-dependencies]
+criterion = "0.4.0"
 regex = "1.0.5"
+
+[[bench]]
+name = "templates"
+harness = false
