--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,12 +41,14 @@ jobs:
       - run: .circleci/shellcheck-install.sh "${HOME}/bin"
       - run: .circleci/shellcheck-run.sh
       - *RESTORE_REGISTRY
-      - run: cargo generate-lockfile
+      - run: cargo update
       - *SAVE_REGISTRY
       - run: rustc --version | tee ~/rust-version
       - *RESTORE_DEPS
-      - run: cargo test --all
+      - run: cargo build --all-targets
       - *SAVE_DEPS
+      - run: cargo test
+      - run: cargo bench --bench templates --profile dev -- --quick
       - run: .circleci/mdbook-install.sh "${HOME}/bin"
       - run: mdbook build docs
       - store_artifacts:
