Use user registry paths.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ save_registry: &SAVE_REGISTRY
   save_cache:
     key: registry-{{ .BuildNum }}
     paths:
-    - /usr/local/cargo/registry/index
+    - ~/.cargo/registry/index
 deps_key: &DEPS_KEY
   key: deps-{{ checksum "~/rust-version" }}-{{ checksum "Cargo.lock" }}
 restore_deps: &RESTORE_DEPS
@@ -19,7 +19,7 @@ save_deps: &SAVE_DEPS
     <<: *DEPS_KEY
     paths:
     - target
-    - /usr/local/cargo/registry/cache
+    - ~/.cargo/registry/cache
 
 version: 2
 jobs:
